fix jump screen

--- a/shop/static/css/_base.css
+++ b/shop/static/css/_base.css
@@ -3,6 +3,10 @@
     padding: 0;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 
 body {
     font-family: "Jost", sans-serif;
